--- a/vnext/JSI/Desktop/packages.config
+++ b/vnext/JSI/Desktop/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="ChakraCore.Debugger" version="0.0.0.44" targetFramework="native" />
   <package id="Microsoft.ChakraCore.vc140" version="1.11.20" targetFramework="native" developmentDependency="true" />
-  <package id="ReactWindows.ChakraCore.ARM64" version="1.11.20-dev1" targetFramework="native" developmentDependency="true" />
+  <package id="ReactWindows.ChakraCore.ARM64" version="1.11.20" targetFramework="native" developmentDependency="true" />
 </packages>
