--- a/vnext/package.json
+++ b/vnext/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-windows",
-  "version": "0.63.0-preview.5",
+  "version": "0.63.0-preview.6",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -65,12 +65,12 @@
     "react-native": "^0.63.0-0"
   },
   "beachball": {
-    "defaultNpmTag": "preview",
+    "defaultNpmTag": "latest",
     "gitTags": true,
     "disallowedChangeTypes": [
       "major",
       "minor",
-      "patch"
+      "prerelease"
     ]
   },
   "files": [
