--- a/packages/react-native-win32/package.json
+++ b/packages/react-native-win32/package.json
@@ -52,7 +52,7 @@
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "@office-iss/rex-win32": "0.62.0-preview.17-tenantreactnativewin-13114",
+    "@office-iss/rex-win32": "0.62.7-tenantreactnativewin-13222",
     "@rnw-scripts/eslint-config": "0.1.0",
     "@types/es6-collections": "^0.5.29",
     "@types/es6-promise": "0.0.32",
