--- a/packages/react-native-win32/package.json
+++ b/packages/react-native-win32/package.json
@@ -52,7 +52,7 @@
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "@office-iss/rex-win32": "0.62.0-preview.17-tenantreactnativewin-13114",
+    "@office-iss/rex-win32": "0.62.7-tenantreactnativewin-13222",
     "@rnw-scripts/eslint-config": "0.1.0",
     "@types/es6-collections": "^0.5.29",
     "@types/es6-promise": "0.0.32",
@@ -62,17 +62,17 @@
     "@types/react-native": "^0.62.10",
     "babel-eslint": "10.0.1",
     "eslint": "6.8.0",
-    "flow-bin": "^0.126.1",
+    "flow-bin": "^0.127.0",
     "jscodeshift": "^0.9.0",
     "just-scripts": "^0.36.1",
     "react": "16.13.1",
-    "react-native": "0.0.0-3346ac7f9",
+    "react-native": "0.0.0-b095432e6",
     "react-native-platform-override": "^0.2.2",
     "typescript": "^3.8.3"
   },
   "peerDependencies": {
     "react": "16.13.1",
-    "react-native": "0.0.0-3346ac7f9"
+    "react-native": "0.0.0-b095432e6"
   },
   "beachball": {
     "defaultNpmTag": "canary",
