--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -613,5 +613,5 @@ jobs:
 
       - template: templates/prep-and-pack-nuget.yml
         parameters:
-          slices: '("x64.Release", "x86.Debug", "ARM.Debug")'
+          slices: '("x64.Release", "x86.Debug", "ARM.Release")'
           packUniversal: false
