--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,7 @@
     "typescriptreact"
   ],
   "eslint.options": {
-    "configFile": "./vnext/.eslintrc.js"
+    "configFile": "./packages/@rnw-scripts/eslint-root-config/eslintrc.js"
   },
   "[json]": {
     "editor.defaultFormatter": "dbaeumer.vscode-eslint"
