--- a/packages/@rnw-scripts/eslint-root-config/package.json
+++ b/packages/@rnw-scripts/eslint-root-config/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@rnw-scripts/eslint-config",
-  "version": "0.1.0",
+  "name": "@rnw-scripts/eslint-root-config",
+  "version": "0.0.0",
   "license": "MIT",
   "main": "eslintrc.js",
   "dependencies": {
-    "@rnw-scripts/eslint-root-config": "0.0.0"
+    "@react-native-community/eslint-config": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "6.8.0"
